# DataPad

./: Buttons.c  CMakeLists.txt  Data_pad.c  Internal_routines.c  Joystick.c  RGBkeypad.c  RGBkeypad.h  ReadMe  Serial.c  animations.h  buttons.h  internal_routines.h  joystick.h  pins.h  serial.h
Libraries/PicoOled/: PicoOled.c  picoOled.h
Libraries/PicoRGB/: PicoRGB.c  picoRGB.h
Windows driver/: dataPadHandler.py  main.py
data_pad_client/: config.cfg  main.py  requirements.txt
